# Loula_SqLite_Viewer

./: MANIFEST.in  README.md  build_app.py  db_config.json  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  cli.py  config.py  database.py  db_config.json  main.py  screens.py  table_browser.py  tools.py  tui.py
src/config/: __init__.py
src/core/: __init__.py  cli.py  main.py
src/database/: __init__.py  database.py
src/tools/: __init__.py  tools.py
src/ui/: __init__.py  screens.py  table_browser.py  tui.py  ui_utils.py
